[gd_scene load_steps=6 format=3 uid="uid://nfayf78xiuap"]

[ext_resource type="Script" path="res://scripts/Main.gd" id="1_ysxum"]
[ext_resource type="Script" path="res://scripts/Control.gd" id="3_1t1c8"]
[ext_resource type="PackedScene" uid="uid://2we3txfr812u" path="res://scenes/Camera_zoom_2d.tscn" id="4_rx82t"]
[ext_resource type="Script" path="res://scripts/EntityPlacer.gd" id="5_8jju5"]
[ext_resource type="Script" path="res://scripts/Minimap.gd" id="5_rg28x"]

[node name="Main" type="Node2D"]
script = ExtResource("1_ysxum")

[node name="EntityPlacer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("5_8jju5")

[node name="CameraZoom2D" parent="." instance=ExtResource("4_rx82t")]
position = Vector2(960, 536)
limit_left = -40000
limit_top = -40000
limit_right = 40000
limit_bottom = 40000
editor_draw_limits = true

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="UILayer"]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
grow_horizontal = 2
script = ExtResource("3_1t1c8")
metadata/_edit_use_anchors_ = true

[node name="ConstructionPanel" type="Panel" parent="UILayer/Control"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 0
offset_left = -248.0
offset_right = 252.0
offset_bottom = 120.0

[node name="button_residental" type="Button" parent="UILayer/Control/ConstructionPanel"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="button_commercial" type="Button" parent="UILayer/Control/ConstructionPanel"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="button_industrial" type="Button" parent="UILayer/Control/ConstructionPanel"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="button_roads" type="Button" parent="UILayer/Control/ConstructionPanel"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="button_demolish" type="Button" parent="UILayer/Control/ConstructionPanel"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="button_services" type="Button" parent="UILayer/Control/ConstructionPanel"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="button_social" type="Button" parent="UILayer/Control/ConstructionPanel"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="DebugInfo" type="Label" parent="UILayer/Control"]
layout_mode = 0
offset_left = 648.0
offset_top = 16.0
offset_right = 936.0
offset_bottom = 256.0
horizontal_alignment = 2

[node name="Minimap" type="Container" parent="UILayer"]
anchors_preset = -1
anchor_top = -0.044
anchor_right = 0.172
anchor_bottom = 0.161
offset_left = 1696.0
offset_top = 735.36
offset_right = 1807.68
offset_bottom = 1032.16
script = ExtResource("5_rg28x")

[node name="CameraMarker" type="Sprite2D" parent="UILayer/Minimap"]
position = Vector2(296, 392)

[node name="MinimapSprite" type="Sprite2D" parent="UILayer/Minimap"]
position = Vector2(416, 472)

[connection signal="set_camera_position" from="." to="CameraZoom2D" method="_on_set_camera_position"]
[connection signal="worldgen_ready" from="." to="UILayer/Minimap" method="_on_main_worldgen_ready"]
[connection signal="pressed" from="UILayer/Control/ConstructionPanel/button_residental" to="UILayer/Control" method="_on_button_residental_pressed"]
[connection signal="pressed" from="UILayer/Control/ConstructionPanel/button_commercial" to="UILayer/Control" method="_on_button_commercial_pressed"]
[connection signal="pressed" from="UILayer/Control/ConstructionPanel/button_industrial" to="UILayer/Control" method="_on_button_industrial_pressed"]
[connection signal="pressed" from="UILayer/Control/ConstructionPanel/button_roads" to="UILayer/Control" method="_on_button_roads_pressed"]
[connection signal="pressed" from="UILayer/Control/ConstructionPanel/button_demolish" to="UILayer/Control" method="_on_button_demolish_pressed"]
[connection signal="pressed" from="UILayer/Control/ConstructionPanel/button_services" to="UILayer/Control" method="_on_button_services_pressed"]
[connection signal="pressed" from="UILayer/Control/ConstructionPanel/button_social" to="UILayer/Control" method="_on_button_social_pressed"]
